...
                                <rect key="frame" x="20" y="317" width="350" height="50"/>
                                <color key="backgroundColor" red="0.42745098040000001" green="0.67843137249999996" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="3wy-kv-jf3"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="로그인하기">
                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="loginButtonClikced:" destination="eyh-OF-Wsh" eventType="touchUpInside" id="LLr-z5-rxO"/>
                                </connections>
                            </button>
...
